--- a/7210400026538.html
+++ b/7210400026538.html
@@ -8,19 +8,19 @@
     <meta name="author" content="Trillium Kitchens and Baths">
 
     <title>
-    7210400026538
+    Trillium Kitchens
 </title>
 
     
 
-    <meta name="description" content="7210400026538">
-    <meta name="keywords" content="7210400026538">
+    <meta name="description" content="Trillium Kitchens">
+    <meta name="keywords" content="Trillium Kitchens">
 
-    <meta property="og:title" content="7210400026538">
-    <meta property="og:image" content="https://trilliumkitchens.com/static/img/K-Slide-2.jpeg">
+    <meta property="og:title" content="Trillium Kitchens">
+    <meta property="og:image" content="https://trilliumkitchens.com/static/img/K-Slide-3.jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:description" content="7210400026538">
+    <meta property="og:description" content="Render for customer">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://trilliumkitchens.com/">
     <meta property="og:site_name" content="Trillium Kitchens And Baths">
