--- a/7210400026538.html
+++ b/7210400026538.html
@@ -24,8 +24,8 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://trilliumkitchens.com/">
     <meta property="og:site_name" content="Trillium Kitchens And Baths">
-    <script src="./static/js/aframe.js"></script>
-
+    <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+    <script src="./static/js/a-touch-controls.js"></script>
     <script src="https://rawgit.com/takahirox/aframe-outline/master/build/aframe-outline.min.js"></script>
 
 
